--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
