--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^0.0.14",
+    "recharts": "^2.2.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
